@@ -14,8 +14,9 @@ lcs-desktop (2.4.8~5) Lcs; urgency=low
   * Add tips styles for links in user infos
   * Comment console log
   * Add icon admins 
+  * Fix the icons position relative to the document
 
- -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Sun, 26 Sep 2010 04:31:50 +0200
+ -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Sun, 26 Sep 2010 15:51:58 +0200
 
 lcs-desktop (2.4.8~4) Lcs; urgency=low
 
